# ffmpeg-cross-compile

./: .gitignore  .gitmodules  CMakeLists.txt  FFmpeg.cmake  README.md  android-cross.txt.in  env.sh.example  fdk-aac.cmake  freetype.cmake  harfbuzz.cmake  lame.cmake  libmp3lame.pc  patch_x265_pc.cmake  setup_android_build.sh  vpx.cmake  x264.cmake  x265.cmake
